--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-saved_model/zerorc_sup.pt
-datasets/fewrel/train.txt
+saved_model/*
+datasets/fewrel/*
+tsne*
