--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 saved_model/*
-datasets/fewrel/*
+datasets/fewrel/train.txt
+datasets/fewrel/val.txt
+datasets/wikizsl/train.txt
+datasets/wikizsl/val.txt
 tsne*
